# magik_merlin_ml_platform

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  PHASE2_COMPLETION.md  PROJECT_STATUS.md  README.md  ROADMAP.md  TESTING.md  main.py  mkdocs.yml  ml_platform_framework_outline_and_prompt.md  pyproject.toml  pytest.ini  run.sh  setup_platform.py
.github-templates/: README.md
.github-templates/workflows/: ci.yml
.github/workflows/: ci.yml
data/raw/: sample_dataset.csv
docs/: ML_ENGINE_GUIDE.md  PHASE3_COMPLETION.md  PHASE4_PLAN.md  PIPELINE_GUIDE.md  index.md
docs/api/: core.md  data-sources.md  experiments.md  ml-engine.md
docs/development/: DEPENDENCY_MANAGEMENT.md  architecture.md  code-quality.md  contributing.md  releases.md  testing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/user-guide/: automl.md  data-management.md  deployment.md  experiments.md  overview.md  visualization.md
examples/: README.md  ml_engine_demo.py  ml_engine_tutorial.ipynb  pipeline_demo.py
experiments/metadata/: 33fede71-40ef-4d3e-a764-7d7dcc9a9629.json
scripts/: CHANGELOG.md  __init__.py  mlflow.sh  start_mlflow.py
src/: __init__.py
src/config/: settings.py
src/core/: __init__.py
src/core/data_sources/: __init__.py  aws_connector.py  base.py  cloud_storage.py  databases.py  local_file.py  snowflake_connector.py  streaming.py
src/core/experiment_tracking/: __init__.py  mlflow_tracker.py
src/core/experiments/: __init__.py  manager.py  tracking.py
src/core/logging/: __init__.py  config.py
src/core/ml/: __init__.py  pycaret_integration.py
src/core/ml_engine/: __init__.py  automl.py  base.py  classical.py  deep_learning.py  ensemble.py  explainability.py  time_series.py
src/core/pipeline_orchestration/: __init__.py  executor.py  nodes.py  pipeline.py  scheduler.py  storage.py
src/deployment/: __init__.py
src/ui/: __init__.py  app.py
src/ui/components/: __init__.py
src/ui/panels/: __init__.py  data_management.py  deployment.py  experimentation.py  model_evaluation.py  pipeline_management.py  visualization.py
src/ui/visualizations/: __init__.py  base.py  data_exploration.py  experiment_tracking.py  model_evaluation.py
src/utils/: __init__.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_app_integration.py  test_data_workflow.py  test_ml_engine_mlflow.py
tests/unit/: __init__.py  test_app_layout.py  test_config.py  test_data_sources.py  test_experiment_tracking.py  test_ml_engine_automl.py  test_ml_engine_base.py  test_ml_engine_classical.py  test_pipeline_nodes.py  test_pipeline_system.py  test_pycaret_integration.py  test_ui_panels.py
