[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-platform"
dynamic = ["version"]
description = "A comprehensive Panel-based ML experimentation platform"
authors = [{ name = "ML Platform Team" }]
license = { text = "MIT" }
requires-python = ">=3.13"
# Core dependencies (Python 3.13 compatible)
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.5",
    "scipy>=1.11",
    "pyarrow>=12.0.0",
    "panel>=1.4.0",
    "bokeh>=3.2.0",
    "plotly>=5.15.0",
    "holoviews>=1.17.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "click>=8.1.0",
    "requests>=2.31.0",
    "mlflow>=3.1.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "python-semantic-release>=8.0.0",
]

# Optional cloud and ML dependencies
cloud = [
    "mlflow>=2.9.0",
    "snowflake-connector-python>=3.6.0",
    "boto3>=1.34.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "openpyxl>=3.1.0",
    "uvicorn>=0.25.0",
    "azure-storage-blob>=12.19.0",
    "google-cloud-storage>=2.10.0",
]

# ML dependencies (Phase 2) - Custom ML Engine
ml = [
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "torch>=2.0.0",
    "lightning>=2.0.0",
    "optuna>=3.0.0",
    "imbalanced-learn>=0.11.0",
    "shap>=0.44.0",
    "scikit-optimize>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# Enable comprehensive rule set
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "FBT",  # flake8-boolean-trap
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EM",   # flake8-errmsg
    "FA",   # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PD",   # pandas-vet
    "PGH",  # pygrep-hooks
    "PL",   # Pylint
    "TRY",  # tryceratops
    "FLY",  # flynt
    "PERF", # Perflint
    "FURB", # refurb
    "LOG",  # flake8-logging
    "RUF",  # Ruff-specific rules
]

# Globally ignored rules (apply to all files)
# See docs/development/code-quality.md for detailed explanations
ignore = [
    "E501",    # Line too long (handled by formatter)
    "ANN101",  # Missing type annotation for self (implicit in Python)
    "ANN102",  # Missing type annotation for cls (implicit in Python)
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
    "T201",    # Print statements (allowed for CLI output and debugging)
    "S101",    # Use of assert (common and acceptable in tests)
    "PTH123",  # Path.open vs built-in open (not always applicable)
    "FBT001",  # Boolean positional arg (acceptable for sklearn compatibility)
    "FBT002",  # Boolean default value (acceptable for sklearn compatibility)
    "PLR0913", # Too many arguments (ML models often need many hyperparameters)
    "PLR0912", # Too many branches (acceptable for model selection logic)
    "PLR0915", # Too many statements (acceptable for comprehensive pipelines)
]

# Per-file ignore rules
# See docs/development/code-quality.md for detailed explanations of ML-specific rules
[tool.ruff.lint.per-file-ignores]
# Test files - relaxed rules for test code
"tests/**/*.py" = [
    "S101",    # Use of assert (standard in pytest)
    "S104",    # Binding to all interfaces OK in tests
    "S108",    # /tmp usage acceptable in tests
    "ANN",     # Type annotations not required in tests
    "PLR2004", # Magic values acceptable in test assertions
    "SLF001",  # Private member access needed for testing internals
    "E402",    # Module imports after code (common in test setup)
    "F401",    # Unused imports (often for availability checks)
    "F841",    # Unused variables (test fixtures)
    "FBT003",  # Boolean positional args OK in tests
    "PLC0415", # Inline imports OK for conditional test logic
    "N803",    # X argument name OK in ML tests
    "N806",    # X variable name OK in ML tests
    "ARG002",  # Unused fixtures are normal in pytest
    "BLE001",  # Catch Exception OK in tests
    "PD003",   # .isnull vs .isna - both work
    "PD011",   # .values vs .to_numpy - both work
    "SIM117",  # Nested with statements OK in tests
    "PT011",   # pytest.raises broad exceptions OK in tests
    "DTZ005",  # datetime.now() without tz acceptable in tests
    "B007",    # Loop control variable not used - OK in tests
]
# ML Engine - follows ML/data science conventions (sklearn, pandas, numpy)
"src/core/ml_engine/**/*.py" = [
    "N803",    # IMPORTANT: X (features) and y (targets) are universal ML conventions
    "N806",    # IMPORTANT: Uppercase X follows sklearn, pandas, numpy standards
    "ANN401",  # typing.Any needed - ML functions accept many types (DataFrame, ndarray, etc.)
    "TID252",  # Relative imports (.base, .classical) cleaner within ml_engine package
    "G004",    # f-strings in logging - modern Python 3.13+ style, more readable
    "PLR2004", # Magic numbers are domain knowledge (e.g., n_classes > 2 = multiclass)
    "TC001",   # Imports used at runtime, not just type-checking
    "TC002",   # Imports used at runtime, not just type-checking
    "ARG002",  # Unused arguments in Lightning methods (batch_idx, deep) are required by interface
    "PD011",   # .values vs .to_numpy - both work in ML context
    "RET504",  # Unnecessary assignment before return - clearer with explicit variable
]
# Pipeline orchestration - similar to experiments code
"src/core/pipeline_orchestration/**/*.py" = [
    "ANN",     # Type annotations flexible for pipeline nodes
    "ARG002",  # Unused arguments in callbacks/hooks are normal
    "BLE001",  # Catch Exception OK for pipeline error handling
    "DTZ005",  # datetime.now() without tz is acceptable
    "G004",    # f-strings in logging
    "N806",    # X_test, X_train are ML conventions
    "PLC0415", # Inline imports OK for optional dependencies
    "PLR2004", # Magic values OK in pipeline logic
    "PTH123",  # Path.open vs open - both acceptable
    "RUF022",  # __all__ sorting not critical
    "SIM102",  # Nested if statements OK for readability
    "TC001",   # Imports used at runtime, not just type-checking
    "TC003",   # Standard library imports used at runtime
    "TID252",  # Relative imports cleaner within package
    "TRY300",  # try-except-else acceptable pattern
    "TRY400",  # logging.error vs logging.exception - both acceptable
    "TRY401",  # Logging exception with message is informative
]
# Existing codebase - more permissive for pre-Phase 2 code
"src/core/experiments/**/*.py" = ["W293", "G004", "G101", "ANN", "TID252", "BLE001", "UP035", "UP045", "UP006", "DTZ005", "PLR2004", "TRY300", "ARG002", "ANN401", "SIM102", "LOG014", "EM102", "TRY003"]
"src/core/data_sources/**/*.py" = ["W293", "TID252", "BLE001", "TRY300", "TRY003", "EM101", "EM102", "B904", "ANN003", "ARG002", "SIM102", "G201", "RET504", "RUF059"]
"src/core/experiment_tracking/**/*.py" = ["ANN", "BLE001", "G004", "S108", "RET504", "LOG015", "TRY401"]
"src/core/experiments/tracking.py" = ["PLC0415", "TRY401"]
"src/core/logging/**/*.py" = ["W291", "W292"]
"src/ui/**/*.py" = ["W293", "W291", "W292", "ANN", "G004", "PLR2004", "RUF010", "G201", "F841", "PERF401", "PERF102", "BLE001", "TRY400", "TRY401", "C408", "UP035", "UP045", "I001", "F401", "ARG001", "ARG002", "ANN401", "DTZ005", "Q000", "S110", "PLC0415", "PIE790", "RUF022", "A002", "RUF012", "PD003", "RUF005", "RUF001", "PD011", "SIM108", "PLW3301", "PLR1714", "N803", "N806", "B007"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["src"]

# Automated Versioning with Python Semantic Release
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "src/__init__.py:__version__",
]
build_command = "uv build"
dist_path = "dist/"
upload_to_pypi = false
upload_to_release = true
remove_dist = false
major_on_zero = true
commit_message = "🚀 Release v{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
exclude_commit_patterns = [
    "^build:",
    "^chore:",
    "^ci:",
    "^docs:",
    "^style:",
    "^refactor:",
    "^test:",
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore", 
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

# Alternative: setuptools-scm for Git-based versioning
[tool.setuptools_scm]
write_to = "src/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "node-and-date"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
show_error_codes = true
strict = true

[tool.pytest.ini_options]
markers = [
    "requires_xgboost: Tests that require XGBoost (install with: uv sync --extra ml)",
    "requires_lightgbm: Tests that require LightGBM (install with: uv sync --extra ml)",
    "requires_catboost: Tests that require CatBoost (install with: uv sync --extra ml)",
    "requires_pytorch: Tests that require PyTorch/Lightning (install with: uv sync --extra ml)",
    "requires_ml: Tests that require any ML library (install with: uv sync --extra ml)",
]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[dependency-groups]
dev = [
    "python-semantic-release>=9.21.1",
    "ruff>=0.12.0",
]
